[package]
name = "dfs-test-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.43.0", features = ["fs", "time"]}
serde = {version = "1.0.217", features = ["derive"]}
toml = "0.8.14"
async-scoped = { version = "0.9.0", features = ["use-tokio"]}
rand = "0.9.1"
mds = { git = "https://github.com/Blue-Silence/new_mds", branch = "cloudlab-test", optional = true}



[features]
default = ["infinifs_client"]
native_client = []
infinifs_client = ["mds"]